--- a/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin Homepage</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
