Reservation Management commit
Draft logo, heading title, search bar, and column base table with user information are all included in reservation management. For now, no buttons have been added.

--- a/Resturaunt_web/Views/Home/AdminReservation.cshtml
+++ b/Resturaunt_web/Views/Home/AdminReservation.cshtml
@@ -3,3 +3,57 @@
     Layout = "/Views/Shared/_HeaderLayout.cshtml";
 }
 <h1>@ViewData["Title"]</h1>
+<!DOCTYPE html>
+
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <link rel="stylesheet" href="Reservation Management CSS.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+<body>
+    <div style="background-color: royalblue; border: solid; text-align: center">
+        <img src="logo.png" />
+        <h1 style="text-align:center">
+            Reservation Management
+        </h1>
+    </div>
+    <div class="container  p-4 mb-4">
+
+
+        <div style="background-color:royalblue; border-top:solid; width:1000px; ">
+            <div class="form-group">
+                <input type="text" name="search" id="search" aria-describedby="HelpId" placeholder="search" width="100" float="right" />
+
+            </div>
+            <div style="border-top:solid">
+                <table style="width:100%">
+                    <tr>
+                        <th>Name</th>
+                        <th>Phone#</th>
+                        <th>Bill est </th>
+                        <th>Time</th>
+                        <th>Date</th>
+                        <th>Expand</th>
+                    </tr>
+                    <tr>
+                        <td>John</td>
+                        <td>1234</td>
+                        <td>$45</td>
+                        <td>10:45pm</td>
+                        <td>29/5</td>
+                        <td>Expand</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
+
+    </div>
+    <hr>
+    </div>
+    </div>
+</body>
+</html>
