--- a/Resturaunt_web/Views/Home/AdminReservation.cshtml
+++ b/Resturaunt_web/Views/Home/AdminReservation.cshtml
@@ -2,7 +2,6 @@
     ViewData["Title"] = "Reservation Manager";
     Layout = "/Views/Shared/_HeaderLayout.cshtml";
 }
-<h1>@ViewData["Title"]</h1>
 <!DOCTYPE html>
 
 
@@ -14,6 +13,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+    <div class="return" style="width:100%;height:40px;Background-color:D3D3D3;">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
+    </div>
+
     <div style="background-color: royalblue; border: solid; text-align: center">
         <img src="logo.png" />
         <h1 style="text-align:center">
