--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -2,4 +2,10 @@
     ViewData["Title"] = "User Manager";
     Layout = "/Views/Shared/_HeaderLayout.cshtml";
 }
-<h1>@ViewData["Title"]</h1>
+
+<body>
+    <div class="return" style="width:100%;height:40px;Background-color:D3D3D3;">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
+    </div>
+
+</body>
