--- a/Resturaunt_web/Views/Shared/_HeaderLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HeaderLayout.cshtml
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 	<body>
-		<header style="width:100%;height:300px;Background-color:fff;display:box">
-			<center>Admin</center>
+        <header style="width:100%;height:300px;Background-color:D3D3D3;">
+            <h1><center>Admin</center></h1>
 
-
-		</header>
+        </header>
 		
 		<div class="main">
 			@RenderBody()
