--- a/Resturaunt_web/Views/Home/AdminMenu.cshtml
+++ b/Resturaunt_web/Views/Home/AdminMenu.cshtml
@@ -2,10 +2,20 @@
     ViewData["Title"] = "Menu Manager";
     Layout = "/Views/Shared/_HeaderLayout.cshtml";
 }
+<head>
+    <link rel="stylesheet" href="~/css/admin.css" />
+</head>
+
 
 <body>
-    <div class="return" style="width:100%;height:40px;Background-color:D3D3D3;">
+    <div class="return">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
+    </div>
+
+    <div class="PageHeader">
+        <h1>
+            Menu Management
+        </h1>
     </div>
 
 </body>
