--- a/Resturaunt_web/Views/Home/AdminReservation.cshtml
+++ b/Resturaunt_web/Views/Home/AdminReservation.cshtml
@@ -9,20 +9,20 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet" href="Reservation Management CSS.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/admin.css" />
+    
 </head>
 <body>
-    <div class="return" style="width:100%;height:40px;Background-color:D3D3D3;">
+    <div class="return">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
     </div>
 
-    <div style="background-color: royalblue; border: solid; text-align: center">
-        <img src="logo.png" />
-        <h1 style="text-align:center">
+    <div class="PageHeader">
+        <h1>
             Reservation Management
         </h1>
     </div>
+
     <div class="container  p-4 mb-4">
 
 
