reservation management commit
buttons added

--- a/Resturaunt_web/Views/Home/AdminReservation.cshtml
+++ b/Resturaunt_web/Views/Home/AdminReservation.cshtml
@@ -12,6 +12,9 @@
     <title></title>
     <link rel="stylesheet" href="Reservation Management CSS.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style>
+   th,tr,td{border:solid}
+</style>
 </head>
 <body>
     <div style="background-color: royalblue; border: solid; text-align: center">
@@ -40,20 +43,49 @@
                     </tr>
                     <tr>
                         <td>John</td>
-                        <td>1234</td>
+                        <td>1234</td> 
                         <td>$45</td>
                         <td>10:45pm</td>
                         <td>29/5</td>
-                        <td>Expand</td>
+                        <td><button>Expand
+                            </button></td>
                     </tr>
+                  
+
+                   <tr>
+                       <td  style="border:none">
+                           Name-John<br />
+                           Phone#-1234<br />
+                           Bill est-$45<br />
+                         
+                           Email-John@gmail.com<br />
+                          
+
+                       </td>
+                       <td  style="border:none">
+                           <div class="container shadow p-4 mb-4" style="border:solid; background-color:aliceblue; height:300px; width:300px;">
+                               preoder meal + cost
+                           </div>
+                       </td >
+                       <td  style="border:none">
+                           Time-10:45pm<br />
+                           Date-29/5<br />
+
+                       </td>
+                       <td  style="border:none">
+                           <button>Edit
+                               </button><br />
+                           <button>save</button><br />
+                           <button>delete</button><br />
+                       </td>
+                   </tr>
                 </table>
             </div>
 
         </div>
 
     </div>
-    <hr>
-    </div>
-    </div>
+  
+   
 </body>
 </html>
