MENU MANGEMENT COOMIT
deatils

--- a/Resturaunt_web/Views/Home/AdminMenu.cshtml
+++ b/Resturaunt_web/Views/Home/AdminMenu.cshtml
@@ -17,5 +17,39 @@
             Menu Management
         </h1>
     </div>
+    <button>
+        Add Menu
+    </button>
+    <div>
+        Menu Name       <div class="form-group">
+            <input type="text" name="search" id="search" aria-describedby="HelpId" placeholder="search" width="100" float="right" />
 
+        </div>
+    </div>
+    <div style="border-top:solid">
+        <table style="width:100%">
+            <tr>
+                <th>Menu Name</th>
+                <th>Price</th>
+                <th>Take Away Price</th>
+                <th>Active</th>
+                <th>Sort Order</th>
+                <th>Action</th>
+            </tr>
+            <tr>
+                <td>Egg sandwhich</td>
+                <td>$10</td>
+                <td>$10</td>
+                <td>Yes</td>
+                <td>1</td>
+                <td>
+                    <button>
+                        Edit
+                    </button>
+                </td>
+            </tr>
+
+
+            </table>
+        </div>
 </body>
