Reservation Database added

--- a/Resturaunt_web/Views/Home/AdminReservation.cshtml
+++ b/Resturaunt_web/Views/Home/AdminReservation.cshtml
@@ -1,3 +1,4 @@
+@model IEnumerable<Resturaunt_web.Models.Reservations>
 @{
     ViewData["Title"] = "Reservation Manager";
     Layout = "/Views/Shared/_HeaderLayout.cshtml";
