--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -14,7 +14,7 @@
     <div class="column">
 
 
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminReservation">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">
             <div class="AdminOption"><center>Reservation Manager</center></div>
         </a>
 
