--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -8,8 +8,8 @@
 
 <style>
     body {
-        background-color: #ccebff;
-        margin: 5px 
+        background-color: #b3d9ff;
+        margin: 5px
     }
 
     * {
