--- a/Resturaunt_web/wwwroot/css/admin.css
+++ b/Resturaunt_web/wwwroot/css/admin.css
@@ -1,14 +1,19 @@
-﻿.column {
+﻿:root {
+    --lightgrey: D3D3D3;
+    --background: royalblue;
+}
+
+.column {
     width: 20%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-left: 55px
+    margin-left: 5%;
 }
 
 .AdminOption {
-    width: 400px;
-    height: 400px;
-    background-color: D3D3D3;
+    width: 200px;
+    height: 200px;
+    background-color: var(--lightgrey);
     border-style: solid;
     border-width: 1px;
     border-radius: 25px;
@@ -16,16 +21,22 @@
 }
 
     .AdminOption center {
-        font-size: 50px;
+        font-size: 1vw;
     }
 
 .return {
     height: 40px;
-    Background-color: D3D3D3;
+    Background-color: var(--lightgrey);
 }
 
-.PageHeader {
-    background-color: royalblue;
+H1 {
+    background-color: var(--background);
     border: solid;
     text-align: center
+}
+
+.table {
+    background-color: var(--background);
+    border-top: solid;
+    width: 1000px;
 }
