--- a/Resturaunt_web/Views/Reservations/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations/Index.cshtml
@@ -10,20 +10,15 @@
     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
 </div>
 
- <div class="PageHeader">
         <h1>
             Reservation Management
         </h1>
-    </div>
 <div class="container  p-4 mb-4">
     <div class="table">
-            <div class="form-group">
-                <input type="text" name="search" id="search" aria-describedby="HelpId" placeholder="search" width="100" float="right" />
 
-            </div>
-            <div style="border-top:solid">
+            <div>
                 <table style="width:100%">
-                    <p>
+                    <p style="margin-top:10px;margin-bottom:10px;">
                         <a asp-action="Create">Create New</a>
                     </p>
                     <table class="table">
@@ -72,8 +67,8 @@
                                     @Html.DisplayFor(modelItem => item.OrderId)
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
                                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 </td>
                             </tr>
