--- a/Resturaunt_web/wwwroot/css/admin.css
+++ b/Resturaunt_web/wwwroot/css/admin.css
@@ -20,9 +20,9 @@
     margin: 10px;
 }
 
-    .AdminOption center {
-        font-size: 1vw;
-    }
+.AdminOption center {
+    font-size: 1vw;
+}
 
 .return {
     height: 40px;
@@ -39,4 +39,19 @@ H1 {
     background-color: var(--background);
     border-top: solid;
     width: 1000px;
+}
+
+.table a {
+    color: black;
+    border: solid;
+    padding: 3px;
+    background-color: white;
+}
+th {
+    font-size: 20px;
+}
+
+td {
+    font-weight: 400;
+    font-size: 20px;
 }
