--- a/Resturaunt_web/Views/Reservations/Details.cshtml
+++ b/Resturaunt_web/Views/Reservations/Details.cshtml
@@ -54,7 +54,7 @@
         </dl>
 
         <div>
-            <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+            <a class="btn btn-primary"  asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
         </div>
     </div>
 </div>
