--- a/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
@@ -23,10 +23,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usermanagements" asp-action="Index">User Manager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin Homepage</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin</a>
+                        </li>
+                        <li class="nav-item">
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
