--- a/Resturaunt_web/Views/Usermanagements/Index.cshtml
+++ b/Resturaunt_web/Views/Usermanagements/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>User Management Systems </h1>
 
 <p>
     <a asp-action="Create">Create New</a>
