--- a/Resturaunt_web/Views/Home/AdminMenu.cshtml
+++ b/Resturaunt_web/Views/Home/AdminMenu.cshtml
@@ -42,14 +42,27 @@
                 <td>$10</td>
                 <td>Yes</td>
                 <td>1</td>
-                <td>
-                    <button>
-                        Edit
-                    </button>
-                </td>
+
             </tr>
 
 
-            </table>
-        </div>
+        </table>
+
+
+
+        <input type="text" />
+        <input type="number" />
+        <input type="number" />
+        <input type="text" />
+        <input type="number" />
+        <td>
+            <button>
+                Edit
+            </button>
+        </td>
+        <input type="submit" />
+        <input type="checkbox" />
+
+
+    </div>
 </body>
