update admin navbar commit
admin navbar font changes

--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -24,6 +24,9 @@
             background-color: rgb(251,252,148);
             max-width: 2000px;
         }
+        p{font-size:50px;
+
+        }
     </style>
 </head>
 
@@ -34,33 +37,32 @@
 
     <div class="container">
         <div class="row">
-            <div class="AdminOption">
+            <div class="AdminOption" style="width:400px; height:300px;">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminReservation">
-                    <h1>Reservation Manager</h1>
+                    <p>Reservation Manager</p>
 
                 </a>
             </div>
-            <div class="AdminOption">
+            <div class="AdminOption" style="width:400px; height:300px;">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminUser">
-                    <h1>User Manager</h1>
+                    <p>User Manager</p>
 
 
                 </a>
             </div>
-            <div class="AdminOption">
+            <div class="AdminOption" style="width:400px; height:300px;">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminMenu">
-                    <h1>Menu Manager</h1>
+                    <p>Menu Manager</p>
 
-        <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">
-            <div class="AdminOption"><h1>Reservation Manager</h1></div>
-        </a>
+        
+           
 
 
                 </a>
             </div>
-            <div class="AdminOption">
+            <div class="AdminOption" style="width:400px; height:300px;">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminDeals">
-                    <h1>Deals/Specials Manager</h1>
+                    <p>Deals/Specials Manager</p>
 
                 </a>
             </div>
