--- a/Resturaunt_web/Views/Shared/_HeaderLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HeaderLayout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <button>Admin</button>
+        <button><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin</a></button>
         <center><img src="~/Theme/img/Logo.png"></center>
     </header>
 
