--- a/Resturaunt_web/Views/Menus/Create.cshtml
+++ b/Resturaunt_web/Views/Menus/Create.cshtml
@@ -2,15 +2,18 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
 
-<h1>Create</h1>
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Return</a>
+</div>
 
-<h4>Menu</h4>
-<hr />
+<h1>Create Menu Item</h1>
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 container">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -35,9 +38,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
