--- a/Resturaunt_web/Views/Menus/Edit.cshtml
+++ b/Resturaunt_web/Views/Menus/Edit.cshtml
@@ -2,15 +2,18 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
+
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Return</a>
+</div>
 
 <h1>Edit</h1>
 
-<h4>Menu</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MenuId" />
@@ -34,10 +37,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
