--- a/Resturaunt_web/Views/Reservations/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations/Index.cshtml
@@ -10,18 +10,16 @@
     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
 </div>
 
-        <h1>
-            Reservation Management
-        </h1>
+<h1>Reservation Management</h1>
+
 <div class="container  p-4 mb-4">
     <div class="table">
-
-            <div>
                 <table style="width:100%">
                     <p style="margin-top:10px;margin-bottom:10px;">
                         <a asp-action="Create">Create New</a>
                     </p>
-                    <table class="table">
+
+                    <table>
                         <thead>
                             <tr>
                                 <th>
@@ -46,35 +44,35 @@
                             </tr>
                         </thead>
                         <tbody>
-                    @foreach (var item in Model) {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.NumPeople)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Time)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Date)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Cost)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.OrderId)
-                                </td>
-                                <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                                </td>
-                            </tr>
-                    }
+                            @foreach (var item in Model) {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NumPeople)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Time)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Date)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Cost)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.OrderId)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        </td>
+                                    </tr>
+                            }
                         </tbody>
                     </table>
-        </div> 
+                </table>
+            </div> 
     </div> 
-</div>  
