--- a/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomeLayout.cshtml
@@ -29,6 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Admin</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
