--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -20,7 +20,12 @@
             User Management
         </h1>
     </div>
-   
+    <style>
+        body {
+            background-color: #cce6ff;
+        }
+        
+    </style>
 
 
 </body>
