--- a/Resturaunt_web/Views/Usermanagements/Index.cshtml
+++ b/Resturaunt_web/Views/Usermanagements/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>User Management Systems </h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add Users</a>
 </p>
 <table class="table">
     <thead>
