--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -20,12 +20,78 @@
             User Management
         </h1>
     </div>
+
     <style>
         body {
             background-color: #cce6ff;
         }
-        
+* {box-sizing: border-box;}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav .search-container {
+  float: left;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: left;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: left;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+  {
+    
+  }
     </style>
+   
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Search.." name="search">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        
+
+        <div style="padding-left:16px">
+            
+        </div>
+
+  
+
+
+
+
+
 
 
 </body>
