Users manager update

--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -25,67 +25,107 @@
         body {
             background-color: #cce6ff;
         }
-* {box-sizing: border-box;}
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+        * {
+            box-sizing: border-box;
+        }
 
-.topnav .search-container {
-  float: left;
-}
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
+        .topnav .search-container {
+            float: left;
+        }
 
-.topnav .search-container button {
-  float: left;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
+        .topnav input[type=text] {
+            padding: 6px;
+            margin-top: 8px;
+            font-size: 17px;
+            border: none;
+        }
 
-.topnav .search-container button:hover {
-  background: #ccc;
-}
+        .topnav .search-container button {
+            float: left;
+            padding: 6px;
+            margin-top: 8px;
+            margin-right: 16px;
+            background: #ddd;
+            font-size: 17px;
+            border: none;
+            cursor: pointer;
+        }
 
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: left;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
-  {
-    
-  }
+            .topnav .search-container button:hover {
+                background: #ccc;
+            }
+
+        .topnav a, .topnav input[type=text], .topnav .search-container button {
+            float: left;
+            display: block;
+            text-align: left;
+            width: 100%;
+            margin: 0;
+            padding: 14px;
+        }
+
+        .topnav input[type=text] {
+            border: 1px solid #ccc;
+            <style> table, th, td border: 1px solid white;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            background-color: #96D4D4;
+        }
     </style>
-   
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Search.." name="search">
-                </form>
-            </div>
-        
 
-        <div style="padding-left:16px">
-            
-        </div>
 
-  
+
+    <div class="search-container">
+        <form action="/action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+        </form>
+    </div>
+
+
+    <div style="padding-left:10px">
+
+    </div>
+
+    <table style="width:85%">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Date</th>
+
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+        </tr>
+    </table>
+
+
 
 
 
