--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -38,20 +38,20 @@
     <div class="container">
         <div class="row">
             <div class="AdminOption" style="width:400px; height:300px;">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminReservation">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">
                     <p>Reservation Manager</p>
 
                 </a>
             </div>
             <div class="AdminOption" style="width:400px; height:300px;">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminUser">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">
                     <p>User Manager</p>
 
 
                 </a>
             </div>
             <div class="AdminOption" style="width:400px; height:300px;">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminMenu">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">
                     <p>Menu Manager</p>
 
         
