--- a/Resturaunt_web/Views/Users/Index.cshtml
+++ b/Resturaunt_web/Views/Users/Index.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>User Manager</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New User</a>
 </p>
 <table class="table">
     <thead>
