--- a/Resturaunt_web/Views/Menus/Index.cshtml
+++ b/Resturaunt_web/Views/Menus/Index.cshtml
@@ -7,50 +7,54 @@
 <link rel="stylesheet" href="~/css/admin.css" />
 
 <div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="AdminHomepage">Return</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
 </div>
 
 <h1>Menu Management</h1>
 
-<div class="container p-4 mb-4"
-<table class="table">
-    <table style="width:100%">
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.MenuId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.MenuId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.MenuId">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="container p-4 mb-4">
+    <div class="table">
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Create">Create New</a>
+        </p>
+        <table style="width:100%">
+
+
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Price)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.MenuId">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.MenuId">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.MenuId">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    </div>
