--- a/Resturaunt_web/Views/Reservations/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
 <link rel="stylesheet" href="~/css/admin.css" />
 
@@ -14,65 +14,65 @@
 
 <div class="container  p-4 mb-4">
     <div class="table">
-                <table style="width:100%">
-                    <p style="margin-top:10px;margin-bottom:10px;">
-                        <a asp-action="Create">Create New</a>
-                    </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Create">Create New</a>
+        </p>
+        <table style="width:100%">
 
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.NumPeople)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Time)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Date)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Cost)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.OrderId)
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model) {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.NumPeople)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Time)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Date)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Cost)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.OrderId)
-                                        </td>
-                                        <td>
-                                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                                        </td>
-                                    </tr>
-                            }
-                        </tbody>
-                    </table>
-                </table>
-            </div> 
+
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumPeople)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Time)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Cost)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderId)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumPeople)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Time)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Cost)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderId)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div> 
     </div> 
