update user manager

--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -71,8 +71,8 @@
         }
 
         .topnav input[type=text] {
-            border: 1px solid #ccc;
-            <style> table, th, td border: 1px solid white;
+            border: 1px solid blue;
+            table, th, td border: 1px solid white;
             border-collapse: collapse;
         }
 
