--- a/Resturaunt_web/Views/Home/AdminUser.cshtml
+++ b/Resturaunt_web/Views/Home/AdminUser.cshtml
@@ -103,10 +103,10 @@
 
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>001</td>
+            <td>Jess</td>
+            <td>jess@gmail.com</td>
+            <td>2/5/2022</td>
 
         </tr>
         <tr>
