--- a/Resturaunt_web/wwwroot/css/main.css
+++ b/Resturaunt_web/wwwroot/css/main.css
@@ -3,28 +3,33 @@
     --background: royalblue;
 }
 
+.menu a {
+    font-size: 24px;
+}
+
+.reservation a {
+    font-size: 24px;
+}
+
 .special {
     height: 600px;
     width:100%;
-    background: #ff0000
 }
 
 .reservation {
     height:300px;
     width:100%;
-    background: #ff6a00
 }
 
 .menu {
     height: 600px;
     width: 100%;
-    background: #ffd800
+    margin: 0;
 }
 
 .social {
     height: 900px;
     width: 100%;
-    background: #b6ff00
 }
 
 .socialLinks {
@@ -35,9 +40,40 @@
 .socialPhotos {
     width: 100%;
     height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
 }
 
 .return {
     height: 40px;
     Background-color: var(--lightgrey);
 }
+
+.column {
+    float: left;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+    margin: 0;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.socialColumn {
+    flex: 25%;
+    padding: 0 4px;
+}
+
+    .socialColumn img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width:100%;
+    }
