--- a/Resturaunt_web/Views/Home/Reservation.cshtml
+++ b/Resturaunt_web/Views/Home/Reservation.cshtml
@@ -1,16 +1,65 @@
-@{
-    ViewData["Title"] = "Homepage";
-    Layout = "/Views/Shared/_HeaderLayout.cshtml";
-}
+@{ ViewData["Title"] = "Homepage";
+                Layout = "/Views/Shared/_HeaderLayout.cshtml"; }
 
 <html>
 <link rel="stylesheet" href="~/css/main.css" />
 <body>
     <div class="return">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
+
     </div>
 
     <p>Reserve</p>
+    <h1>Create Reservation</h1>
+    <form action="results.html" method="GET" enctype="multipart/form-data">
+
+
+        <label for="start"> Date:</label>
+
+        <input type="date" id="start" name="trip-start"
+               value="2022-07-22"
+               min="2022-01-01" max="2022-12-31">
+        <label for="appt">Choose a time for your Reservation:</label>
+
+        <input type="time" id="appt" name="appt"
+               min="00:00" max="24:00" required>
+
+        <div>
+            <label for="tentacles">Number of People:</label>
+
+            <input type="number" id="tentacles" name="tentacles"
+                   min="1" max="100">
+        </div>
+        <label for="name">First Name:</label>
+        <input type="text" name="name" id="name" required>
+        <label for="name">Last Name:</label>
+        <input type="text" name="name" id="name" required>
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required>
+
+            <label for="phone">Phone Number:</label>
+
+            <input type="tel" id="phone" name="phone"
+                   pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                   required>
+        </div>
+
+
+
+
+
+
+
+
+
+        <button type="reset">Reset</button>
+        <button type="submit">Submit</button>
+    </form>
+
+
+
+
 </body>
 
 </html>
